Changing site title

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-title = "Szacilowski"
+title = "szacilowski"
 baseurl = "http://www.example.com"
 languagecode = "en"
 defaultcontentlanguage = "en"
