Add newsletter section

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -80,6 +80,11 @@ url = "projects/"
 weight = 3
 
 [[languages.en.menu.main]]
+name = "Newsletter"
+url = "https://mailchi.mp/df41fedcfe18/szacilowskicom-newsletter"
+weight = 3
+
+[[languages.en.menu.main]]
 name = "Contact me"
 url = "contact/"
 weight = 5
